made small fixes
